<resources>
    <string name="app_name">Калькулятор</string>
    <string name="main_mode">Обычный</string>
    <string name="dev_mode">Программист</string>
    <string name="engineer_mode">Инженер</string>
    <string name="drawer_open">Открыть</string>
    <string name="drawer_close">Скрыть</string>
    <string name="operationClear">C</string>
    <string name="operationPercent">%</string>
    <string name="operationSignSwitch">+/-</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="operationDivide">/</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="operationMultiply">*</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="operationSubtract">-</string>
    <string name="signComma">,</string>
    <string name="digit0">0</string>
    <string name="constPi">π</string>
    <string name="constE">e</string>
    <string name="operationAdd">+</string>
    <string name="operationEquals">=</string>
    <string name="divide_by_zero_error">Ошибка: деление на 0</string>
    <string name="sqrt_of_negative_error">Ошибка: корень из отрицательного числа</string>
    <string name="factorial_of_negative_error">Ошибка: факториал отрицательного числа</string>
    <string name="trigonometric_value_not_defined_error">Ошибка: значение не определено</string>
    <string name="logarithm_of_not_positive_error">Ошибка: логарифм неположительного числа </string>
    <string name="operationSin">sin</string>
    <string name="operationCos">cos</string>
    <string name="operationTg">tg</string>
    <string name="operationCtg">ctg</string>
    <string name="operationFactorial">!</string>
    <string name="operationRoot">√</string>
    <string name="operationPower">^</string>
    <string name="operationReverse">1/x</string>
    <string name="operationPowerOf2">2<sup><small>x</small></sup></string>
    <string name="operationLg">lg</string>
    <string name="operationLn">ln</string>
    <string name="operation">pi</string>
    <string name="operationPowerOf10">10<sup><small>x</small></sup></string>
    <string name="switchDeg">DEG</string>
    <string name="switchRad">RAD</string>
    <string name="digitA">A</string>
    <string name="digitB">B</string>
    <string name="digitC">C</string>
    <string name="digitD">D</string>
    <string name="digitE">E</string>
    <string name="digitF">F</string>
    <string name="operationAND">AND</string>
    <string name="operationOR">OR</string>
    <string name="operationXOR">XOR</string>
    <string name="operationLeftShift"><![CDATA[<<]]></string>
    <string name="operationRightShift"><![CDATA[>>]]></string>
    <string name="currency_converter">Конвертер валют</string>
    <string name="russianRub">Российских рублей</string>
    <string name="RUB">RUB</string>
</resources>
