<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EngineerActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar" />

        <LinearLayout
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?android:actionBarSize"
            android:orientation="vertical"
            android:padding="16dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="233dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/formula"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2.1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="end|bottom"
                    android:maxLines="1"
                    android:textSize="@dimen/formula_text_size"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/result"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.8"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_vertical|end"
                    android:maxLines="1"
                    android:textSize="@dimen/display_text_size"
                    tools:text="0" />

            </LinearLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="3"
                android:alignmentMode="alignMargins"
                android:columnCount="5"
                android:orientation="horizontal">


                <Button
                    style="@style/SecondaryOperation"
                    android:onClick="onSwitchDegRadClick"
                    android:text="@string/switchDeg"
                    tools:ignore="OnClick" />

                <Button
                    style="@style/SecondaryOperation"
                    android:onClick="onEClick"
                    android:text="@string/constE" />

                <Button
                    style="@style/SecondaryOperation"
                    android:onClick="onPIClick"
                    android:text="@string/constPi" />

                <Button
                    style="@style/PrimaryOperation"
                    android:onClick="onResetClick"
                    android:text="@string/operationClear" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:onClick="onBackspaceClick"
                    android:src="@drawable/ic_backspace_bold"
                    android:tint="@color/colorPrimary"
                    tools:ignore="ContentDescription" />

                <Button
                    style="@style/SecondaryOperation"
                    android:onClick="onOperationClick"
                    android:text="@string/operationSin" />

                <Button
                    style="@style/SecondaryOperation"
                    android:onClick="onOperationClick"
                    android:text="@string/operationCos" />

                <Button
                    style="@style/SecondaryOperation"
                    android:onClick="onOperationClick"
                    android:text="@string/operationTg" />

                <Button
                    style="@style/SecondaryOperation"
                    android:onClick="onOperationClick"
                    android:text="@string/operationCtg" />


                <Button
                    style="@style/PrimaryOperation"
                    android:onClick="onOperationClick"
                    android:text="@string/operationPercent" />

                <Button
                    style="@style/SecondaryOperation"
                    android:onClick="onOperationClick"
                    android:text="@string/operationLn" />

                <Button
                    style="@style/SecondaryOperation"
                    android:onClick="onOperationClick"
                    android:text="@string/operationRoot" />

                <Button
                    style="@style/SecondaryOperation"
                    android:onClick="onOperationClick"
                    android:text="@string/operationFactorial" />

                <Button
                    style="@style/SecondaryOperation"
                    android:onClick="onOperationClick"
                    android:text="@string/operationPower" />


                <Button
                    style="@style/PrimaryOperation"
                    android:onClick="onOperationClick"
                    android:text="@string/operationDivide" />

                <Button
                    style="@style/SecondaryOperation"
                    android:onClick="onOperationClick"
                    android:text="@string/operationLg" />

                <Button
                    style="@style/CalcButton"
                    android:onClick="onNumberClick"
                    android:text="@string/digit7" />

                <Button
                    style="@style/CalcButton"
                    android:onClick="onNumberClick"
                    android:text="@string/digit8" />

                <Button
                    style="@style/CalcButton"
                    android:onClick="onNumberClick"
                    android:text="@string/digit9" />

                <Button
                    style="@style/PrimaryOperation"
                    android:onClick="onOperationClick"
                    android:text="@string/operationMultiply" />

                <Button
                    style="@style/SecondaryOperation"
                    android:onClick="onOperationClick"
                    android:text="@string/operationPowerOf2" />

                <Button
                    style="@style/CalcButton"
                    android:onClick="onNumberClick"
                    android:text="@string/digit4" />

                <Button
                    style="@style/CalcButton"
                    android:onClick="onNumberClick"
                    android:text="@string/digit5" />

                <Button
                    style="@style/CalcButton"
                    android:onClick="onNumberClick"
                    android:text="@string/digit6" />

                <Button
                    style="@style/PrimaryOperation"
                    android:onClick="onOperationClick"
                    android:text="@string/operationSubtract" />

                <Button
                    style="@style/SecondaryOperation"
                    android:onClick="onOperationClick"
                    android:text="@string/operationPowerOf10" />

                <Button
                    style="@style/CalcButton"
                    android:onClick="onNumberClick"
                    android:text="@string/digit1" />

                <Button
                    style="@style/CalcButton"
                    android:onClick="onNumberClick"
                    android:text="@string/digit2" />

                <Button
                    style="@style/CalcButton"
                    android:onClick="onNumberClick"
                    android:text="@string/digit3" />

                <Button
                    style="@style/PrimaryOperation"
                    android:onClick="onOperationClick"
                    android:text="@string/operationAdd" />

                <Button
                    style="@style/SecondaryOperation"
                    android:onClick="onOperationClick"
                    android:text="@string/operationReverse" />

                <Button
                    style="@style/CalcButton"
                    android:onClick="onSignSwitchClick"
                    android:text="@string/operationSignSwitch" />

                <Button
                    style="@style/CalcButton"
                    android:onClick="onNumberClick"
                    android:text="@string/digit0" />

                <Button
                    style="@style/CalcButton"
                    android:onClick="onNumberClick"
                    android:text="@string/signComma" />

                <Button
                    style="@style/PrimaryOperation"
                    android:onClick="onEqualsClick"
                    android:text="@string/operationEquals" />

            </GridLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/left_drawer"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="none"
        android:clickable="true"
        android:orientation="horizontal">

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:menu="@menu/navigation_drawer" />
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>
