<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CurrencyActivity"
    android:id="@+id/drawerLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar" />

        <LinearLayout
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?android:actionBarSize"
            android:orientation="vertical"
            android:padding="16dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="233dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/firstCurrencySpinner"
                    style="@style/CurrencySpinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/firstValue"
                        android:layout_width="match_parent"
                        style="@style/ValueTextView"/>
                    <TextView
                        android:id="@+id/firstCurrencyName"
                        android:layout_width="match_parent"
                        style="@style/NameTextView"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/secondCurrencySpinner"
                    style="@style/CurrencySpinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/secondValue"
                        android:layout_width="match_parent"
                        style="@style/ValueTextView" />
                    <TextView
                        android:id="@+id/secondCurrencyName"
                        android:layout_width="match_parent"
                        style="@style/NameTextView" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights"
                    android:text="@string/RUB"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="@dimen/currencyCharCodeSize"
                    android:textColor="#000"
                    android:autoSizeMinTextSize="@dimen/currencyCharCodeSize"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMaxTextSize="72sp" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/rubValue"
                        android:layout_width="match_parent"
                        style="@style/ValueTextView" />

                    <TextView
                        android:layout_width="match_parent"
                        style="@style/NameTextView"
                        android:text="@string/russianRub"/>
                </LinearLayout>
            </LinearLayout>


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_gravity="center_horizontal"
                android:alignmentMode="alignMargins"
                android:columnCount="4"
                android:orientation="horizontal">

                <Button
                    style="@style/CalcButton"
                    android:onClick="onNumberClick"
                    android:text="@string/digit7" />
                <Button
                    style="@style/CalcButton"
                    android:onClick="onNumberClick"
                    android:text="@string/digit8" />
                <Button
                    style="@style/CalcButton"
                    android:onClick="onNumberClick"
                    android:text="@string/digit9" />
                <Button
                    style="@style/CalcButton"
                    android:onClick="onResetClick"
                    android:text="@string/operationClear"
                    android:layout_rowSpan="2"/>
                <Button
                    style="@style/CalcButton"
                    android:onClick="onNumberClick"
                    android:text="@string/digit4" />
                <Button
                    style="@style/CalcButton"
                    android:onClick="onNumberClick"
                    android:text="@string/digit5" />
                <Button
                    style="@style/CalcButton"
                    android:onClick="onNumberClick"
                    android:text="@string/digit6" />
                <Button
                    style="@style/CalcButton"
                    android:onClick="onNumberClick"
                    android:text="@string/digit1" />
                <Button
                    style="@style/CalcButton"
                    android:onClick="onNumberClick"
                    android:text="@string/digit2" />
                <Button
                    style="@style/CalcButton"
                    android:onClick="onNumberClick"
                    android:text="@string/digit3" />
                <ImageButton
                    android:layout_rowSpan="2"
                    android:layout_gravity="fill"
                    android:layout_height="0dp"
                    android:layout_width="0dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:onClick="onBackspaceClick"
                    android:src="@drawable/ic_backspace"
                    tools:ignore="ContentDescription" />
                <Button
                    style="@style/CalcButton"
                    android:onClick="onNumberClick"
                    android:text="@string/digit0"
                    android:layout_column="1"/>
            </GridLayout>

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/left_drawer"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="none"
        android:clickable="true"
        android:orientation="horizontal">

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:menu="@menu/navigation_drawer" />
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>
